deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wildfly-app
  labels:
    app: wildfly-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wildfly-app
  template:
    metadata:
      labels:
        app: wildfly-app
    spec:
      containers:
        - name: wildfly-app
          image: ghcr.io/sangbinlee/dev9-web-lon-001:c467f819b88f265f66c1582c5bb57125ede4b1e1
          ports:
            - containerPort: 8080
            - containerPort: 9404
---
apiVersion: v1
kind: Service
metadata:
  name: wildfly-service
  labels:
    app: wildfly-app
spec:
  selector:
    app: wildfly-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
    - protocol: TCP
      port: 9404
      targetPort: 9404
      name: metrics
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildfly-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - diary.dev9.shop
    secretName: wildfly-tls
  rules:
  - host: diary.dev9.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wildfly-service
            port:
              number: 80
